--- a/src/App.css
+++ b/src/App.css
@@ -92,12 +92,17 @@ header > input {
   flex-wrap: wrap;
   justify-content: space-between;
 
-  margin-bottom: 20px;
+  margin-top: 30px;
 }
 
 .offer-card {
   margin-bottom: 40px;
   border: solid 2px purple;
+
+  height: 460px;
+
+  display: flex;
+  flex-direction: column;
 }
 
 .owner-name {
@@ -106,6 +111,7 @@ header > input {
   gap: 10px;
 
   color: #999999;
+  font-size: 12px;
 }
 
 .owner-image {
