--- a/src/index.css
+++ b/src/index.css
@@ -127,3 +127,8 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+a {
+  text-decoration: none;
+  color: inherit; /* Pour hériter la couleur du texte environnant */
+}
