--- a/src/App.css
+++ b/src/App.css
@@ -57,11 +57,15 @@ header > input {
   border: solid 1px #2cb1ba;
   border-radius: 5px;
   background-color: transparent;
+
+  cursor: pointer;
 }
 
 .colored {
   background-color: #2cb1ba;
   color: white;
+
+  cursor: pointer;
 }
 
 /* --------------------------------------- */
@@ -132,3 +136,5 @@ header > input {
 .size-brand {
   color: #999999;
 }
+
+/* OFFER */
