--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -46,6 +46,10 @@
   cursor: pointer;
 }
 
+.log-button:hover {
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
 .log-bottom-text {
   color: #2baeb7;
   font-size: 12px;
