--- a/src/pages/signup/signup.css
+++ b/src/pages/signup/signup.css
@@ -65,6 +65,10 @@
   cursor: pointer;
 }
 
+.sup-button:hover {
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
 .sup-bottom-text {
   color: #2baeb7;
   font-size: 12px;
