--- a/src/App.css
+++ b/src/App.css
@@ -40,11 +40,6 @@ header {
   cursor: pointer;
 }
 
-header > input {
-  width: 630px;
-  height: 30px;
-}
-
 .user {
   display: flex;
   gap: 20px;
@@ -85,13 +80,33 @@ header > input {
 }
 
 .search {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+
+  width: 600px;
   height: 35px;
 
-  background-color: #f5f6f7;
-  color: #999999;
+  padding: 2px;
 
+  background-color: #f5f6f7;
   border-radius: 5px;
+
+  color: #999999;
+}
+
+.search > i {
+  margin-left: 5px;
+}
+
+.search > input {
+  width: 100%;
+  height: 100%;
+
   border: none;
+  background-color: #f5f6f7;
+
+  color: #999999;
 }
 
 /* --------------------------------------- */
