--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
 }
 
-* {
+html {
   font-family: "Poppins", sans-serif;
   line-height: 1.2;
 }
@@ -85,7 +85,7 @@ header {
   gap: 10px;
 
   width: 600px;
-  height: 35px;
+  height: 40px;
 
   padding: 2px;
 
@@ -107,6 +107,80 @@ header {
   background-color: #f5f6f7;
 
   color: #999999;
+  font-size: 14px;
+}
+
+.search > input:focus {
+  outline: none;
+  color: black;
+}
+
+.other-filters {
+  display: flex;
+
+  margin-top: 20px;
+}
+
+.other-filters > div {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+
+  font-size: 12px;
+}
+
+/* HEADER SLIDER (made with ChatGPT) */
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 40px;
+  height: 20px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  transition: 0.4s;
+  border-radius: 25px;
+}
+
+.slider:before {
+  position: absolute;
+  content: "↑";
+  font-size: 14px;
+  text-align: center;
+  line-height: 20px;
+  height: 15px;
+  width: 15px;
+  left: 5px;
+  bottom: 2.5px;
+  background-color: white;
+  transition: 0.4s;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+input:checked + .slider {
+  background-color: #00bcd4;
+}
+
+input:checked + .slider:before {
+  transform: translateX(18px);
+  content: "↓";
 }
 
 /* --------------------------------------- */
@@ -153,6 +227,14 @@ header {
 .home-button:hover {
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
+
+.no-result {
+  margin-top: 20px;
+  font-size: 18px;
+  color: #999999;
+}
+
+/* HOME > OFFERS */
 
 .offers {
   display: flex;
