modal created but no home refresh

--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -1,5 +1,6 @@
 .log-h2 {
   font-size: 24px;
+  margin-bottom: 40px;
 }
 
 .log-main {
@@ -54,6 +55,8 @@
   color: #2baeb7;
   font-size: 12px;
   cursor: pointer;
+
+  margin-bottom: 10px;
 }
 
 .log-account {
