--- a/src/App.css
+++ b/src/App.css
@@ -410,3 +410,52 @@ input:checked + .slider:before {
 }
 
 /* --------------------------------------- */
+
+/* MODAL */
+
+.App {
+  position: relative;
+}
+
+.modal-root {
+  /* Pour que la modal prenne tout l'écran : */
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  /* Pour placer la modal tout en haut à gauche une fois en position relative */
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* Mettre un background noir et transparent : */
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.modal {
+  background-color: white;
+  width: 400px;
+  min-height: 400px;
+  padding: 10px 50px;
+  /* Placer le button en haut à droite de la modal : */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  border-radius: 10px;
+}
+.modal-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px 10px 20px 10px;
+
+  height: 30px;
+  width: 30px;
+  border-radius: 5px;
+
+  background-color: #2cb1ba;
+  color: white;
+  border: none;
+
+  cursor: pointer;
+}
