--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,10 @@ h2 {
   font-weight: 400;
 }
 
+input:focus {
+  outline: none;
+}
+
 /* --------------------------------------- */
 
 /* HEADER */
